--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <div class="h-[4em] w-full bg-[#ba005c] bg-opacity-10"><div class="container mx-auto pt-[1em]"><h1 class="text-black text-xl">Pokedex</h1></div></div>
+  <div class="h-[4em] w-full bg-[#ba005c] bg-opacity-10"><div class="container mx-auto pt-[1em]"><h1 class="text-black text-xl">Pokedex 2.0</h1></div></div>
   <pokedex></pokedex>
 </body>
 </html>
