--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,12 +5,12 @@
   <title>Pokedex</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="pokeball.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <div class="h-[4em] w-full bg-[#ba005c] bg-opacity-10"><div class="container mx-auto pt-[1em]"><h1 class="text-black text-xl">Pokedex 2.0</h1></div></div>
+  <div class="h-[4em] w-full bg-[#ba005c] bg-opacity-10"><div class="container mx-auto pt-[1em]"><h1 class="text-black text-xl">Pokedex</h1></div></div>
   <pokedex></pokedex>
 </body>
 </html>
